--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ Service.EMPTY_BUYER_PRODUCTS=You didn't buy any product :(
 spring.application.name=ProductMS
 server.port=8100
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://product.cy0igri0eruz.ap-south-1.rds.amazonaws.com:3306/productdb
+spring.datasource.url=jdbc:mysql://product.cy0igri0eruz.ap-south-1.rds.amazonaws.com:3306/product
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
